--- a/index.html
+++ b/index.html
@@ -436,20 +436,39 @@
         </div>
         <div class="literature_news">
             <ul>
-                <li><a href="#"><img src="img/111.png" alt="picture" width="342" height="553"></a>
-                    <h2><a href="#">How literature can help people cope with mental health problems</a></h2>
-                    <a href="#"><span class="font_orange">Nathan Sandoval </span> <span class="fontcaption_grey"> | 15.10.16</span></a>
+                <li class="block-literature">
+                    <div class="img-literature">
+                        <a href="#"><img src="img/111.png" alt="picture" width="342" height="553"></a>
+                    </div>
+                    <div class="text-literature">
+                        <h2><a href="#">How literature can help people cope with mental health problems</a></h2>
+                        <a href="#"><span class="font_orange">Nathan Sandoval </span> <span class="fontcaption_grey"> | 15.10.16</span></a>
+                    </div>
+                    <div class="clearfix"></div>
                 </li>
-                <li><a href="#"><img src="img/222.png" alt="picture" width="342" height="553"></a>
-                    <h2><a href="#">Sales of 'Harry Potter and the Cursed Child' script book hit</a></h2>
-                    <a href="#"><span class="font_orange">Jacqueline Taylor</span> <span class="fontcaption_grey"> | 23.10.16</span></a>
+                <li class="block-literature">
+                    <div class="img-literature">
+                        <a href="#"><img src="img/222.png" alt="picture" width="342" height="553"></a>
+                    </div>
+                    <div class="text-literature">
+                        <h2><a href="#">Sales of 'Harry Potter and the Cursed Child' script book hit</a></h2>
+                        <a href="#"><span class="font_orange">Jacqueline Taylor</span> <span class="fontcaption_grey"> | 23.10.16</span></a>
+                    </div>
+                    <div class="clearfix"></div>
                 </li>
-                <li><a href="#"><img src="img/333.png" alt="picture" width="342" height="553"></a>
-                    <h2><a href="">Marvel introduces character Riri Williams, a woman who takes ov</a></h2>
-                    <a href="#"><span class="font_orange">Elizabeth Dixon </span> <span class="fontcaption_grey">| 16.10.15</span></a>
+                <li class="block-literature">
+                    <div class="img-literature">
+                        <a href="#"><img src="img/333.png" alt="picture" width="342" height="553"></a>
+                    </div>
+                    <div class="text-literature">
+                        <h2><a href="">Marvel introduces character Riri Williams, a woman who takes ov</a></h2>
+                        <a href="#"><span class="font_orange">Elizabeth Dixon </span> <span class="fontcaption_grey">| 16.10.15</span></a>
+                    </div>
+                    <div class="clearfix"></div>
                 </li>
             </ul>
         </div>
+        <div class="clearfix"></div>
         <div class="literature_news_autor">
             <div class="block_news">
                 <h3>Association of Former Agents of the United States Secret Service
