fixed wrap login responsive for 320px

--- a/article.html
+++ b/article.html
@@ -382,7 +382,7 @@
         </div> <!-- end footer_content container-->
     </section> <!-- wrap-footer -->
 
-
+         <div class="inner-wrap-container">
         <div id="wrap-login">
             <div class="inner-wrap-login">
                 <div class="transp-back-wrap-login"></div>
@@ -423,7 +423,7 @@
                 </form>
             </div>
         </div>
-
+         </div>
 
 
 </body>
