fixed article menu perfect pixel

--- a/article.html
+++ b/article.html
@@ -11,8 +11,10 @@
 </head>
 <body>
 
-    <nav class="menu">
-        <div class="menu_logo"></div>
+<header class="wrap">
+    <nav class="menu container">
+        <div class="menu_logo">
+        </div>
         <ul class="menu_list">
             <li><a href="#">Books</a></li>
             <li><a href="#">Writers</a></li>
@@ -29,10 +31,13 @@
             </li>
             <li>
                 <div id="inner-userpic">
-                    <a href="#wrap-login"><img src="img/Userpic.png" alt="userpic" width="39" height="39"></a></div>
+                    <a href="#wrap-login"><img src="img/Userpic.png" alt="userpic" width="39" height="39"></a>
+                </div>
             </li>
         </ul>
+        <div class="clearfix"></div>
     </nav>
+</header>
 
     <div class="article-container">
         <div class="switch-blog">
