--- a/article.html
+++ b/article.html
@@ -74,14 +74,8 @@
             </figcaption>
         </figure>
         <div class="post-content article-text">
-            <p>Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed sapien metus, scelerisque nec
-                pharetra id,
-                tempor a tortor. Pellentesque non dignissim neque. Ut porta viverra est, ut dignissim elit elementum ut.
-                Nunc vel rhoncus nibh, ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra
-                odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris.
-                <a href="#">Suspendisse felis sem</a>, condimentum ullamcorper est sit amet, molestie mollis nulla.
-                Etiam lorem orci,
-                consequat ac magna quis, facilisis vehicula neque.
+            <p>Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque. Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh, ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris.
+                <a href="#">Suspendisse felis sem</a>, condimentum ullamcorper est sit amet, molestie mollis nulla. Etiam lorem orci, consequat ac magna quis, facilisis vehicula neque.
             </p>
             <blockquote>
                 "We've already had a lot of contact with our counterparts in the U.K. and Canada and know that both
@@ -98,8 +92,9 @@
                 author watering hole of sorts for some of literature's biggest names — James
                 Baldwin, Allen Ginsberg, Anais Nin, Wiliam Burroughs — in the 1960s.
             </div>
-            <div class="inner-article-desc">
-                <div class="article-desk-left">
+            <hr>
+            <div class="inner-article">
+                <div class="article-left">
                     <h5>What better way to celebrate Shakespeare 400 years after his death than at a bookstore in London
                         after a
                         show at the Globe? </h5>
@@ -109,31 +104,39 @@
                         biggest names — James Baldwin
                     </p>
                 </div>
-                <div class="article-desc-right">
+                <div class="article-right">
                     <img src="img/library.png" alt="library" width="263" height="263" class="align-right">
                 </div>
                 <div class="clearfix"></div>
             </div>
-
+            <hr>
             <div class="after-img-text">
-                <p>One of the potential beneficiaries, Jeff Williams, owner of Williams Auto World in
-                    <strong>
-                        Lansing, Mich., said on Thursday that he welcomed the compensation agreement but that the toll
-                        on his business had been heavy.
-                    </strong>
-                </p>
-                <p>
-                    “In 2012, we sold 477 new Volkswagens,’’ Mr. Williams said. “So far this year, we’ve sold 86 new.
-                    That’s a big, big hit.”
-                </p>
+                <div class="text-block">
+                    <p>One of the potential beneficiaries, Jeff Williams, owner of Williams Auto World in
+                        <strong>
+                            Lansing, Mich., said on Thursday that he welcomed the compensation agreement but that the toll
+                            on his business had been heavy.
+                        </strong>
+                    </p>
+                </div>
+                <div class="text-block-q">
+                    <p>
+                        “In 2012, we sold 477 new Volkswagens,’’ Mr. Williams said. “So far this year, we’ve sold 86 new.
+                        That’s a big, big hit.”
+                    </p>
+                </div>
             </div>
             <div class="text-about-story">
-                <h3>Shakespare and Company, Paris</h3>
-                <p>But he expressed hope for 2017. Next spring, Volkswagen is expected to introduce an all-new
-                    gasoline-powered
-                    <a href="#">sport utility vehicle</a>, which had been sorely missing from the Volkswagen lineup.
-                    “Once we get some S.U.V.s, that ought to kick-start things,” Mr. Williams said.
-                </p>
+                <div class="about-story-header">
+                    <h3>Shakespare and Company, Paris</h3>
+                </div>
+                <div class="about-story">
+                    <p>But he expressed hope for 2017. Next spring, Volkswagen is expected to introduce an all-new
+                        gasoline-powered
+                        <a href="#">sport utility vehicle</a>, which had been sorely missing from the Volkswagen lineup.
+                        “Once we get some S.U.V.s, that ought to kick-start things,” Mr. Williams said.
+                    </p>
+                </div>
                 <h4>If you're not sure where to start:</h4>
 
                 <ol class="article-inner-list">
@@ -163,7 +166,7 @@
             <div class="inner-article-block">
                 <div class="article-block">
                     <h5>Read the original story: Most Incredible Bookstores</h5>
-                    <p>Bookstore Day-worthy recommendations wouldn't be complete without a store from the city where
+                    <p class="article-block-text">Bookstore Day-worthy recommendations wouldn't be complete without a store from the city where
                         this holiday originated —
                         San Francisco. As San Fran bookstores go, City Lights (a Bay Area institution since 1953) is a
                         can't-miss for its timeless
