fixed footer wrap and js

--- a/cart.html
+++ b/cart.html
@@ -205,7 +205,9 @@
                     <div class="clearfix"></div>
                 </div>
             </div>
+    </div> <!-- end your cart -->
 
+       <div class="inner-footer">
         <div class="wrap-footer">
             <nav class="menu_futer container">
                 <ul>
@@ -280,7 +282,7 @@
                 </div>
             </div> <!-- end footer_content container-->
         </div> <!-- wrap-footer -->
-    </div> <!-- end your cart> -->
+    </div> <!-- end inner inner-wrap-login -->
 
     <div class="container">
         <div id="wrap-login">
