--- a/cart2.html
+++ b/cart2.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
+    <div class="inner-content">
         <nav class="menu container">
             <div class="menu_logo">
             </div>
@@ -129,7 +130,8 @@
                 </div>
                 <div class="clearfix"></div>
         </div> <!-- end yourcart -->
-
+    </div>
+    <div class="inner-footer">
         <section class="wrap-footer">
             <nav class="menu_futer container">
                 <ul>
@@ -205,6 +207,7 @@
                 </div>
             </div> <!-- end footer_content container-->
         </section> <!-- wrap-footer -->
+    </div>
 
         <div class="container">
             <div id="wrap-login">
