--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Amiri|Lato:400,700|Ramaraja|Rozha+One|PT+Serif|Work+Sans|Yrsa" rel="stylesheet">
 </head>
 <body>
+<div class="inner-container">
     <header class="wrap">
         <nav class="menu container">
             <div class="menu_logo">
@@ -844,7 +845,8 @@
             <div class="clearfix"></div>
         </div>
     </section> <!-- end container -->
-
+</div> <!-- end inner-container -->
+<div class="inner-footer">
     <section class="wrap-footer">
             <nav class="menu_futer container">
                 <ul>
@@ -919,6 +921,7 @@
                 </div>
             </div> <!-- end footer_content container-->
         </section> <!-- wrap-footer -->
+</div>
 
     <section class="container">
         <div id="wrap-login">
