--- a/cart2.html
+++ b/cart2.html
@@ -24,8 +24,9 @@
             <ul class="info_boks">
                 <li><div class="search"></div></li>
                 <li><div class="shoppingcart"></div></li>
-                <li> <div id="inner-userpic">
-                    <a  href="#wrap-login"><img src="img/Userpic.png" alt="userpic" width="39" height="39"></a></div>
+                <li>
+                    <div id="inner-userpic">
+                    <a id="show-popup" href="#wrap-login"><img src="img/Userpic.png" alt="userpic" width="39" height="39"></a></div>
                 </li>
             </ul>
         </nav>
@@ -209,48 +210,50 @@
         </section> <!-- wrap-footer -->
     </div>
 
-        <div class="container">
-            <div id="wrap-login">
-                <div class="inner-wrap-login">
-                    <div class="transp-back-wrap-login"></div>
-                    <a href="#"><img class="rectangle-arrow" src="img/rectangle9.png" alt="rectangle"></a>
-                    <p>Login</p>
-                    <form id="form-login" action="">
-                        <div class="inner-login-email">
-                            <input type="text" class="" placeholder="E-mail" name="login-email">
+    <div class="inner-wrap-container">
+        <div id="wrap-login">
+            <div class="inner-wrap-login">
+                <div class="transp-back-wrap-login"></div>
+                <a id="hide-popup" class="hide"  href="#"><img class="rectangle-arrow" src="img/rectangle9.png" alt="rectangle"></a>
+                <p>Login</p>
+                <form id="form-login" action="">
+                    <div class="inner-login-email">
+                        <input type="text" class="" placeholder="E-mail" name="login-email">
+                    </div>
+                    <div class="inner-login-password">
+                        <input type="text" placeholder="Password" name="login-password">
+                    </div>
+                    <div class="inner-login-form">
+                        <div class="inner-checkbox-remember">
+                            <input type="checkbox" class="checkbox-remember" id="remember" name="remember">
+                            <label for="remember">Remember me</label>
                         </div>
-                        <div class="inner-login-password">
-                            <input type="text" placeholder="Password" name="login-password">
+                        <div class="forgot-password">
+                            <a href="#">Forgot password</a>
                         </div>
-                        <div class="inner-login-form">
-                            <div class="inner-checkbox-remember">
-                                <input type="checkbox" class="checkbox-remember" id="remember" name="remember">
-                                <label for="remember">Remember me</label>
-                            </div>
-                            <div class="forgot-password">
-                                <a href="#">Forgot password</a>
-                            </div>
-                            <div class="clearfix"></div>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="sign-in">
+                        <input type="submit" value="Sign in">
+                    </div>
+                    <!-- <div class="create-account"> -->
+                    <a href="#" class="input-create">Create account<img src="img/rectangle55.png" width="17" height="13"
+                                                                        alt="arrow"></a>
+                    <!-- <div class="hr-form"></div> -->
+                    <div class="inner-login-social">
+                        <h3>Sign in with social:</h3>
+                        <div class="login-social">
+                            <a href="#"><img src="img/icons_svg/rectangle57.png" width="10" height="18" alt="facebook"></a>
+                            <a href="#"><img src="img/icons_svg/rectangle58.png" width="17" height="14" alt="pinterest"></a>
+                            <a href="#"><img src="img/icons_svg/Google.svg" alt="google"></a>
                         </div>
-                        <div class="sign-in">
-                            <input type="submit" value="Sign in">
-                        </div>
-                        <!-- <div class="create-account"> -->
-                        <a href="#" class="input-create">Create account<img src="img/rectangle55.png" width="17" height="13"
-                                                                            alt="arrow"></a>
-                        <!-- <div class="hr-form"></div> -->
-                        <div class="inner-login-social">
-                            <h3>Sign in with social:</h3>
-                            <div class="login-social">
-                                <a href="#"><img src="img/icons_svg/rectangle57.png" width="10" height="18" alt="facebook"></a>
-                                <a href="#"><img src="img/icons_svg/rectangle58.png" width="17" height="14" alt="pinterest"></a>
-                                <a href="#"><img src="img/icons_svg/Google.svg" alt="google"></a>
-                            </div>
-                        </div>
-                    </form>
-                </div>
+                    </div>
+                </form>
             </div>
         </div>
+    </div>
+
+    <script src="js/popup.js"></script>
 
 
 </body>
