add error value for input form

--- a/cart.html
+++ b/cart.html
@@ -286,7 +286,8 @@
                 </div> <!-- footer_section_about -->
 
                 <div class="footer_info">
-                    <p>&#169; 2016 Bookworm. All rights reserved</p>
+                    <p class="footer-info-left" >&#169; 2016 Bookworm. All rights reserved</p>
+                    <p class="footer-info-right"></p>
                 </div>
             </div> <!-- end footer_content container-->
         </div> <!-- wrap-footer -->
