--- a/index.html
+++ b/index.html
@@ -917,17 +917,18 @@
                 </div> <!-- footer_section_about -->
 
                 <div class="footer_info">
-                    <p>&#169; 2016 Bookworm. All rights reserved</p>
+                    <p class="footer-info-left" >&#169; 2016 Bookworm. All rights reserved</p>
+                    <p class="footer-info-right"></p>
                 </div>
             </div> <!-- end footer_content container-->
         </section> <!-- wrap-footer -->
 </div>
 
-    <section class="container">
-        <div id="wrap-login">
-            <div class="inner-wrap-login">
+<div class="inner-wrap-container">
+    <div id="wrap-login">
+        <div class="inner-wrap-login">
             <div class="transp-back-wrap-login"></div>
-            <a href="#"><img class="rectangle-arrow" src="img/rectangle9.png" alt="rectangle"></a>
+            <a id="hide-popup" class="hide"  href="#"><img class="rectangle-arrow" src="img/rectangle9.png" alt="rectangle"></a>
             <p>Login</p>
             <form id="form-login" action="">
                 <div class="inner-login-email">
@@ -962,9 +963,9 @@
                     </div>
                 </div>
             </form>
-            </div>
         </div>
-    </section>
+    </div>
+</div>
 
 </body>
 </html>
