fixed article for responsive

--- a/article.html
+++ b/article.html
@@ -171,17 +171,19 @@
                             can't-miss for its timeless
                         </p>
                     </div>
-                    <p><a href="#">Cras quis nulla commodo</a>, aliquam lectus sed, blandit augue. Cras
+                    <p class="block-float"><a href="#">Cras quis nulla commodo</a>, aliquam lectus sed, blandit augue. Cras
                         ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta. Nam condimentum vitae ligula
                         vel ornare. Phasellus at semper turpis. Nunc eu tellus tortor. Etiam at condimentum nisl, vitae
                         sagittis orci. Donec id
                         dignissim nunc. Donec elit ante, eleifend a dolor et, venenatis facilisis dolor. <strong>In feugiat
                             orci odio, sed lacinia sem elementum quis. You can't just stick to the thrillers.</strong>
-                    </p>
-                    <p>What better way to celebrate Shakespeare 400 years after his death than at a bookstore in London
+                        <br>
+                        What better way to celebrate Shakespeare 400 years after his death than at a bookstore in London
                         after a show at the Globe? Better yet, Lutyens & Rubinstein is the closest you'll get to a real-life
                         version of the Notting Hill book shop Hugh Grant's character owns in the 1999 rom-com.
                     </p>
+                    <!--<p class="block-float">-->
+                    <!--</p>-->
                 </div>
                 <div class="clearfix"></div>
             </div> <!-- end post-content -->
