add cart js valid form for email and phone

--- a/cart.html
+++ b/cart.html
@@ -66,8 +66,8 @@
                         </div>
                         <div class="input-text">
                             <div class="req-symbol">*</div>
-                            <input required id="tel" type="tel" placeholder="Phone"  name="phone">
-                            <label for="tel"></label>
+                            <input required id="phone" type="phone" placeholder="Phone"  name="phone">
+                            <label for="phone"></label>
                             <span class="input-text-error">Phone cannot be blank.</span>
                         </div>
                         <div class="clearfix"></div>
