--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </li>
                 <li>
                     <div id="inner-userpic">
-                        <a href="#wrap-login"><img src="img/Userpic.png" alt="userpic" width="39" height="39"></a>
+                        <a href="#wrap-login" id="show-popup" class="show-button" ><img src="img/Userpic.png" alt="userpic" width="39" height="39"></a>
                     </div>
                 </li>
             </ul>
@@ -937,6 +937,7 @@
                 <div class="inner-login-password">
                     <input type="text" placeholder="Password" name="login-password">
                 </div>
+
                 <div class="inner-login-form">
                     <div class="inner-checkbox-remember">
                         <input type="checkbox" class="checkbox-remember" id="remember" name="remember">
@@ -966,6 +967,49 @@
         </div>
     </div>
 </div>
+
+<!--<div class="inner-wrap-container">-->
+    <!--<div id="wrap-login">-->
+        <!--<div class="inner-wrap-login">-->
+            <!--<div class="transp-back-wrap-login"></div>-->
+            <!--<a id="hide-popup" class="hide"  href="#"><img class="rectangle-arrow" src="img/rectangle9.png" alt="rectangle"></a>-->
+            <!--<p>Login</p>-->
+            <!--<form id="form-login" action="">-->
+                <!--<div class="inner-login-email">-->
+                    <!--<input type="text" class="" placeholder="E-mail" name="login-email">-->
+                <!--</div>-->
+                <!--<div class="inner-login-password">-->
+                    <!--<input type="text" placeholder="Password" name="login-password">-->
+                <!--</div>-->
+                <!--<div class="inner-login-form">-->
+                    <!--<div class="inner-checkbox-remember">-->
+                        <!--<input type="checkbox" class="checkbox-remember" id="remember" name="remember">-->
+                        <!--<label for="remember">Remember me</label>-->
+                    <!--</div>-->
+                    <!--<div class="forgot-password">-->
+                        <!--<a href="#">Forgot password</a>-->
+                    <!--</div>-->
+                    <!--<div class="clearfix"></div>-->
+                <!--</div>-->
+                <!--<div class="sign-in">-->
+                    <!--<input type="submit" value="Sign in">-->
+                <!--</div>-->
+                <!--&lt;!&ndash; <div class="create-account"> &ndash;&gt;-->
+                <!--<a href="#" class="input-create">Create account<img src="img/rectangle55.png" width="17" height="13"-->
+                                                                    <!--alt="arrow"></a>-->
+                <!--&lt;!&ndash; <div class="hr-form"></div> &ndash;&gt;-->
+                <!--<div class="inner-login-social">-->
+                    <!--<h3>Sign in with social:</h3>-->
+                    <!--<div class="login-social">-->
+                        <!--<a href="#"><img src="img/icons_svg/rectangle57.png" width="10" height="18" alt="facebook"></a>-->
+                        <!--<a href="#"><img src="img/icons_svg/rectangle58.png" width="17" height="14" alt="pinterest"></a>-->
+                        <!--<a href="#"><img src="img/icons_svg/Google.svg" alt="google"></a>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</form>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 <script src="js/popup.js"></script>
 
 </body>
