cart js and style

--- a/cart.html
+++ b/cart.html
@@ -77,13 +77,13 @@
                     <div class="form-input ">
                         <div class="input-text-inner">
                             <div class="req-symbol">*</div>
-                            <textarea required id="adress" placeholder="Address" maxlength="150"  name="address" id="address"></textarea>
+                            <textarea required placeholder="Address" name="address" id="address"></textarea>
                             <label for="address"></label>
-                            <span class="input-text-error">Address cannot be blank</span>
+                            <span class="input-text-error padding_0">Address cannot be blank</span>
                         </div>
                     </div>
                     <div class="form-input">
-                        <div class="input-text ">
+                        <div class="input-text">
                             <select id="country" name="country" class="cs-select cs-skin-country" title="country">
                                 <option value="country" disabled selected>Country</option>
                                 <option value="ukraine" >Ukraine</option>
